--- a/index.html
+++ b/index.html
@@ -12,6 +12,24 @@
             crossorigin="anonymous"/>
         <link rel="stylesheet" href="style.css" />
         <script src="https://kit.fontawesome.com/5d4c236ecf.js" crossorigin="anonymous"></script>
+        <style>
+        .dropdown:hover .dropdown-menu{
+            display: block;
+        }
+        .dropdown-menu{
+            margin-top: 0;
+        }
+        </style>
+        <script>
+            $(document).ready(function(){
+                $(".dropdown").hover(function(){
+                    var dropdownMenu = $(this).children(".dropdown-menu");
+                    if(dropdownMenu.is(":visible")){
+                        dropdownMenu.parent().toggleClass("open");
+                    }
+                });
+            });     
+        </script>
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-muted">
@@ -132,7 +150,7 @@
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">COVID-19</a>
+                        <a class="nav-link" style="color: #45B1E5;" href="#">COVID-19</a>
                     </li>
                 </ul>
                 
@@ -163,101 +181,120 @@
         <!-- NAV END -->
         <hr>
         <!-- FOOTER BEGIN -->
-        <!-- <footer class="footer">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-5">
-                        <h5><i class="fa fa-road"></i> ACME CO INC.</h5>
-                        <div class="row">
-                            <div class="col-6">
-                                <ul class="list-unstyled">
-                                    <li><a href="">Product</a></li>
-                                    <li><a href="">Benefits</a></li>
-                                    <li><a href="">Partners</a></li>
-                                    <li><a href="">Team</a></li>
+        <footer class="footer">
+            <section class="footer-primary">
+                <div class="primary-container">
+                    <div class="categories">
+                        <div class="category-col">
+                            <h2 class="category-title">Products</h2>
+                            <nav class="footer-nav">
+                                <ul>
+                                    <li><a href="">The Connected Stage</a></li>
+                                    <li><a href="">Church Streaming License</a></li>
+                                    <li><a href="">Tracks</a></li>
+                                    <li><a href="">Playback</a></li>
+                                    <li><a href="">Pad Player</a></li>
+                                    <li><a href="">Playback Rentals</a></li>
+                                    <li><a href="">Cloud Pro</a></li>
+                                    <li><a href="">RehearsalMix</a></li>
+                                    <li><a href="">ChartBuilder</a></li>
+                                    <li><a href="">Solo Practice Bundle</a></li>
+                                    <li><a href="">Chart Pro</a></li>
+                                    <li><a href="">ProPresenter</a></li>
+                                    <li><a href="">Sounds</a></li>
                                 </ul>
-                            </div>
-                            <div class="col-6">
-                                <ul class="list-unstyled">
-                                    <li><a href="">Documentation</a></li>
-                                    <li><a href="">Support</a></li>
-                                    <li><a href="">Legal Terms</a></li>
+                            </nav>
+                        </div>
+                        <div class="category-col">
+                            <h2 class="category-title">Resources</h2>
+                            <nav class="footer-nav">
+                                <ul>
+                                    <li><a href="">Songs</a></li>
+                                    <li><a href="">Training</a></li>
+                                    <li><a href="">Lead Wordship Well</a></li>
+                                </ul>
+                            </nav>
+                            <h2 class="category-title">Company</h2>
+                            <nav class="footer-nav">
+                                <ul>
                                     <li><a href="">About</a></li>
+                                    <li><a href="">Careers</a></li>
+                                    <li><a href="">News</a></li>
                                 </ul>
-                            </div>
+                            </nav>
                         </div>
-                        <ul class="nav">
-                            <li class="nav-item"><a href="" class="nav-link pl-0"><i class="fa fa-facebook fa-lg"></i></a></li>
-                            <li class="nav-item"><a href="" class="nav-link"><i class="fa fa-twitter fa-lg"></i></a></li>
-                            <li class="nav-item"><a href="" class="nav-link"><i class="fa fa-github fa-lg"></i></a></li>
-                            <li class="nav-item"><a href="" class="nav-link"><i class="fa fa-instagram fa-lg"></i></a></li>
-                        </ul>
-                        <br>
+                        <div class="category-col">
+                            <h2 class="category-title">Store</h2>
+                            <nav>
+                                <ul>
+                                    <li><a href="">Buy Credits</a></li>
+                                    <li><a href="">Free Content</a></li>
+                                    <li><a href="">Request a Song</a></li>
+                                </ul>
+                            </nav>
+                            <h2 class="category-title">Extras</h2>
+                            <nav>
+                                <ul>
+                                    <li><a href="">Sessions</a></li>
+                                    <li><a href="">Testimonials</a></li>
+                                    <li><a href="">Submit your Content</a></li>
+                                    <li><a href="">Playlists</a></li>
+                                </ul>
+                            </nav>
+                        </div>
+                        <div class="category-col">
+                            <h2 class="category-title">Account</h2>
+                            <nav>
+                                <ul>
+                                    <li><a href="">Log In</a></li>
+                                    <li><a href="">Sign Up</a></li>
+                                    <li><a href="">View Cart</a></li>
+                                </ul>
+                            </nav>
+                        </div>
                     </div>
-                    <div class="col-md-2">
-                        <h5 class="text-md-right">Contact Us</h5>
-                        <hr>
+                    <div class="newsletter">
+                        <h1 class="category-title">Subscribe to the MultiTracks Newsletter</h1>
+                        <inpu class="sub-input">
+                            <input type="text" placeholder="Email Address">
+                            <button>Subscribe</button>
                     </div>
-                    <div class="col-md-5">
-                        <form>
-                            <fieldset class="form-group">
-                                <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
-                            </fieldset>
-                            <fieldset class="form-group">
-                                <textarea class="form-control" id="exampleMessage" placeholder="Message"></textarea>
-                            </fieldset>
-                            <fieldset class="form-group text-xs-right">
-                                <button type="button" class="btn btn-secondary-outline btn-lg">Send</button>
-                            </fieldset>
-                        </form>
+                    <div class="support">
+                        <h1 class="category-title">Have a Problem?</h1>
+                        <a href="#">View FAQs or Contact our Support Team</a>
                     </div>
+                    <div class="social">
+                        <div class="icon-container">
+                            <a href="#" class="social-icon"><i class="fa-brands fa-facebook"></i></a>
+                            <a href="#" class="social-icon"><i class="fa-brands fa-twitter"></i></a>
+                            <a href="#" class="social-icon"><i class="fa-brands fa-instagram"></i></a>
+                            <a href="#" class="social-icon"><i class="fa-brands fa-youtube"></i></a>
+                        </div>
+                    </div>
+                    <!--  -->
                 </div>
-            </div>
-        </footer> -->
+            </section>
 
-        <div class="footer-clean">
-            <footer>
-                <div class="container">
-                    <div class="row justify-content-center">
-                        <div class="col-sm-3 col-md-3 item">
-                            <h3>Info</h3>
-                            <ul>
-                                <li><a href="#">Chicago, IL, USA</a></li>
-                                <li><a href="#">Email Us</a></li>
-                                <li><a href="#">Call Us</a></li>
-                            </ul>
-                        </div>
-                        <div class="col-sm-3 col-md-3 item">
-                            <h3>Shows</h3>
-                            <ul>
-                                <li><a href="#">The Piano Lesson</a></li>
-                                <li><a href="#">FAME</a></li>
-                                <li><a href="#">The Color Purple</a></li>
-                            </ul>
-                        </div>
-                        <div class="col-sm-3 col-md-3 item">
-                            <h3>Social</h3>
-                            <ul>
-                                <li><a href="#">Facebook</a></li>
-                                <li><a href="#">Twitter</a></li>
-                                <li><a href="#">Youtube</a></li>
-                            </ul>
-                        </div>
-                        <div class="col-sm-3 col-md- item">
-                            <h3>Social</h3>
-                            <ul>
-                                <li><a href="#">Facebook</a></li>
-                                <li><a href="#">Twitter</a></li>
-                                <li><a href="#">Youtube</a></li>
-                            </ul>
-                        </div>
-                        <div class="col-lg-3 item social"><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-instagram"></i></a>
-                            <p class="copyright">©MultiTracks</p>
-                        </div>
+            <section class="footer-secondary">
+                <div class="secondary-container">
+                    <span class="rights-text">
+                        ©2006-2022 by MultiTracks LLC. All Rights Reserved.
+                    </span>
+                    <div class="center-links">
+                        <a href="" class="terms">Terms</a>
+                        <span>|</span>
+                        <a href="" class="terms">Privacy Policy</a>
+                        <span>|</span>
+                        <a href="" class="terms">Contact</a>
+                    </div>
+                    <div class="language">
+                        <i class="fa-solid fa-globe"></i>
+                        <a href="#">In English</a>
+                        <i class="fa-solid fa-caret-down"></i>
                     </div>
                 </div>
-            </footer>
-        </div>
+            </section>
+        </footer>
         <!-- FOOTER END -->
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
